force-app/main/default/objects/blng__CreditNoteLine__c/fields/AVA_BLNG__Inclusive_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Inclusive_Tax_Amount__c</fullName>
    <inlineHelpText>The calculated tax amount when taxes were indicated to be included on this product line item.</inlineHelpText>
    <label>Inclusive Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>