force-app/main/default/objects/blng__CreditNoteLine__c/fields/Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee__c</fullName>
    <label>Cancellation Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard - all fees due</fullName>
            </value>
            <value>
                <fullName>25% cancellation fee</fullName>
            </value>
            <value>
                <fullName>10% cancellation fee</fullName>
            </value>
            <value>
                <fullName>5% cancellation fee</fullName>
            </value>
            <value>
                <fullName>No fee</fullName>
            </value>
            <value>
                <fullName>Greater than 10%</fullName>
                <isActive>false</isActive>
                <label>Greater than 10%</label>
            </value>
            <value>
                <fullName>Less than or equal to 10%</fullName>
                <isActive>false</isActive>
                <label>Less than or equal to 10%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>