force-app/main/default/objects/blng__CreditNoteLine__c/fields/Includes_modification_to_contract_term__c.field-meta.xml
<CustomField>
    <fullName>Includes_modification_to_contract_term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added integration field as per BIZ-47523</description>
    <label>Includes modification to contract term?</label>
    <type>Checkbox</type>
</CustomField>