force-app/main/default/objects/blng__CreditNoteLine__c/fields/NS_Item_Rate__c.field-meta.xml
<CustomField>
    <fullName>NS_Item_Rate__c</fullName>
    <label>NS Item Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>