force-app/main/default/objects/blng__CreditNoteLine__c/fields/NS_Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Sales_Order_Type__c</fullName>
    <label>NS Sales Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>