force-app/main/default/objects/blng__CreditNoteLine__c/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <description>Added integration field as per BIZ-47523</description>
    <label>Support Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>